[TD-776] Prepare expansions for extension modules (#676)

--- a/expansions/polars/Cargo.toml
+++ b/expansions/polars/Cargo.toml
@@ -64,7 +64,7 @@ panic = "abort"
 strip = "debuginfo"
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "toml"]
+ignored = ["openssl", "toml", "ta-tableframe", "td-build", "te-tableframe"]
 
 [features]
 
