[TD-781] Define GCP credentials for testing (#680)
* Adding GCP0__*

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -244,6 +244,8 @@ jobs:
       IMPORT_AZURE_BASE_URL: ${{ secrets.IMPORT_AZURE_BASE_URL }}
       TRANSPORTER_AZURE_ACCOUNT_KEY: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_KEY }}
       TRANSPORTER_AZURE_ACCOUNT_NAME: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_NAME }}
+      GCP0__GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP0__GCP_SERVICE_ACCOUNT_KEY }}
+      GCP0__GCP_STORAGE_URI: ${{ secrets.GCP0__GCP_STORAGE_URI }}
       TD_DATABRICKS_CATALOG: ${{ secrets.TD_DATABRICKS_CATALOG }}
       TD_DATABRICKS_HOST: ${{ secrets.TD_DATABRICKS_HOST }}
       TD_DATABRICKS_SCHEMA: ${{ secrets.TD_DATABRICKS_SCHEMA }}
