[TD-789] Relaunching workflows does not cancel older ones (#687)

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,8 +5,11 @@
 name: Integration Workflow (Standard)
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}-${{ github.event_name == 'schedule' && 'weekly' || (inputs.runner_action == 'build' && 'build' || format('run-{0}', github.run_id))}}
-  cancel-in-progress: true
+  group: >-
+    ${{ github.workflow }}-
+    ${{ github.event.pull_request.number || github.ref }}-
+    ${{ github.event_name == 'schedule' && 'weekly' || 'build' }}
+  cancel-in-progress: ${{ github.event_name != 'workflow_dispatch' }}
 
 defaults:
   run:
