--- a/make/settings/makers.env
+++ b/make/settings/makers.env
@@ -8,6 +8,7 @@ TD_BUILD_ALL=false
 
 REQUIRE_SERVER_BINARIES=false
 REQUIRE_THIRD_PARTY=false
+REQUIRE_PYDOC_CSV=false
 TD_IGNORE_CONNECTOR_REQUIREMENTS=true
 TD_SKIP_NON_EXISTING_ASSETS=true
 PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES=true
